--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn ./src/index.ts" ,
-    "build": "tsc" ,
-    "start" : "tsc && node ./dist/index.js"
-    
+    "dev": "ts-node-dev --respawn ./src/index.ts",
+    "build": "tsc",
+    "start": "tsc && node ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +22,8 @@
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "mongoose": "^8.15.0"
   }
 }
